[FIX] design not importing in index.css

--- a/main/frontend/src/index.css
+++ b/main/frontend/src/index.css
@@ -1,6 +1,6 @@
+/* import design css */
+@import "./assets/css/loginPage.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-/* import design css */
-@import "./assets/css/loginPage.css"
