--- a/main/frontend/src/assets/css/loginPage.css
+++ b/main/frontend/src/assets/css/loginPage.css
@@ -1,7 +1,8 @@
 /* login page design */
-.login-page {
+.login-page{
   width: 100%;
   height: calc(100vh - 64px);
   top: 64px;
+  overflow: hidden;
 }
 
