--- a/main/frontend/src/index.css
+++ b/main/frontend/src/index.css
@@ -4,3 +4,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* homepage hero-section */
+.homepage-hero-section {
+  height: calc(100vh - 64px);
+}
