--- a/main/frontend/src/assets/css/global.css
+++ b/main/frontend/src/assets/css/global.css
@@ -1,17 +1,18 @@
-@import url('https: //fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-html{
+html {
   font-size: 100%;
   box-sizing: border-box;
 }
 
-body{
+body {
   margin: 0;
   padding: 0;
-  font-family: "Montserrat";
-  overflow-x: hidden!important;
+  font-family: "Montserrat", sans-serif;
+  line-height: 1.5;
+  overflow-x: hidden !important;
 }
 
-*{
+* {
   box-sizing: border-box;
 }
